# city-climate-tracker

./: .env.example  .gitignore  AI-WORKFLOW.md  README.md  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: ci.yml  deploy.yml
apps/api/: .dockerignore  Dockerfile  pyproject.toml  requirements.txt
apps/api/app/: common.py  config.py  db.py  main.py  models.py  seed.py  seed_cli.py
apps/api/app/actions/: models.py  router.py  schemas.py
apps/api/app/ai/: extractor.py  router.py  schemas.py  service.py
apps/api/app/auth/: deps.py  router.py  schemas.py  service.py
apps/api/app/cities/: models.py  queries.py  router.py  schemas.py
apps/api/app/core/: config.py  db.py  deps.py  enums.py  errors.py
apps/api/app/routers/: actions.py  cities.py  extract.py  summary.py
apps/api/app/services/: summary.py
apps/api/app/summary/: router.py  schemas.py  service.py
apps/api/migrations/: env.py
apps/api/migrations/versions/: 0001_initial.py  0002_city_soft_delete.py
apps/api/tests/: conftest.py  test_actions.py  test_auth.py  test_cities.py  test_extract.py  test_health.py  test_migrations.py  test_models.py  test_seed_cli.py  test_summary.py
apps/web/: Dockerfile.prod  middleware.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/components/: forms.tsx
apps/web/lib/: api.ts  auth.ts  cache.ts  hooks.ts  schemas.ts
docs/: DECISIONS.md
docs/superpowers/plans/: 2026-05-20-multicity.md
docs/superpowers/specs/: 2026-05-20-multicity-design.md
(+40 files in other folders)
