[project]
name = "climate-tracker-api"
version = "0.1.0"
description = "City Climate Action Tracker API"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.32.0",
    "sqlmodel==0.0.22",
    "psycopg[binary]==3.2.3",
    "pydantic==2.9.2",
    "pydantic-settings==2.6.0",
    "python-dotenv==1.0.1",
    "langchain==0.3.7",
    "langchain-openai==0.2.8",
    "langchain-core==0.3.18",
    "httpx==0.27.2",
    "pyjwt==2.9.0",
]

[dependency-groups]
dev = [
    "pytest==8.3.3",
    "pytest-asyncio==0.24.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra -q"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
filterwarnings = ["ignore::DeprecationWarning"]
